deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: taxamount-dataload
  name: taxamount-dataload
  namespace: default
spec:
  replicas: 2 #CHANGE
  minReadySeconds: 45
  selector:
    matchLabels:
      app: taxamount-dataload
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: taxamount-dataload
    spec:
      containers:
      - image: dsdebayan/taxamount-dataload:0.0.1-RELEASE #CHANGE
        imagePullPolicy: IfNotPresent
        name: taxamount-dataload
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: taxamount-dataload
  name: taxamount-dataload
  namespace: default
spec:
  ports:
  - # nodePort: 30701 #CHANGE
    port: 8001 #CHANGE
    protocol: TCP
    targetPort: 8001 #CHANGE
  selector:
    app: taxamount-dataload
  sessionAffinity: None #CHANGE
  type: LoadBalancer
